# rag-tutorial

./: pyproject.toml  query_data.py
core/: get_embedding_function.py  populate_database.py
