[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["felipesaadi <felipesaadisiegert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "*"
langchain = "*"
chromadb = "*"
pytest = "*"
boto3 = "*"
langchain-community = "^0.3.8"
langchain-chroma = "^0.1.4"
langchain-ollama = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
